1.全局异常响应参数调整；2.增加用户相关的业务功能